--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="grid-container">
         <div class="output">
-            <div data-previous-operand class="previous-operand">255</div>
-                <div data-current-operand class="current-operand">259</div>
+            <div data-previous-operand class="previous-operand"></div>
+                <div data-current-operand class="current-operand"></div>
         </div>
         <button data-all-clear class="span-two">AC</button>
         <button data-delete >DEL</button>
